# Steel-Runtime

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
apps/: steel_host_main.c
cmake/: SteelRuntimeConfig.cmake.in
include/steel/: abi_hashes.h  contracts_builtin.h  facet.h  plugin_host.h  plugin_manifest.h  policy_config.h  proxy.h  region.h  registry.h  sha256.h
plugins/echo-plugin/: Cargo.toml  README.md
plugins/echo-plugin/keys/: demo_private.pem  demo_public.pem
plugins/echo-plugin/scripts/: abi_hashes_generated.py  embed_manifest.py
plugins/echo-plugin/src/: lib.rs  logic.rs
scripts/: generate_abi_hashes.py  generate_proxies.py  test_attestation_signature_reject.sh  test_critical_memory_writeback_forbidden.sh  test_dynamic_contract_reject.sh  test_facet_contract_vtable_model.sh  test_host_echo.sh  test_host_memory_write_permission.sh  test_malicious_plugin_cannot_modify_critical.sh  test_memory_isolation_regions.sh  test_permission_request_grants.sh  test_plugin_build_fallback.sh  test_plugin_region_allotment.sh  test_proxy_api.sh  test_registry_enumeration.sh  test_signature_c_types_unbounded_params.sh  test_static_contract_accept.sh  test_typed_invoke_auto_marshal.sh  test_typed_signature_contract_enforced.sh
src/: contracts_builtin.c  engine_null.c  engine_wasmtime_component.c  facet_registry.c  manifest_verify.c  plugin_host.c  policy_config.c  proxy.c  region.c  registry.c  sha256.c
wit/: steel-plugin.wit
